<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="10sp">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/notifications_disabled"
            android:textAlignment="inherit"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/add_notification_button"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_rule"
        android:textSize="16sp" />

    <Button
        android:id="@+id/clear_notifications_button"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_rules"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/rules_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>