<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:padding="3sp"
            android:text="@string/set_rule"
            android:textColor="@color/darkGrey"
            android:textSize="24sp" />

        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="1sp"
            android:background="@color/darkGrey"
            android:layout_below="@+id/textView5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout"
            android:layout_below="@+id/line"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/surf_spot"
                android:textSize="15sp"
                android:textColor="@color/darkGrey"/>

            <Spinner
                android:id="@+id/add_notification_case_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minimum_stars"
                android:textColor="@color/darkGrey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText3"
                style="@style/black_line"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minimum_wave_height"
                android:textColor="@color/darkGrey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText4"
                style="@style/black_line"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_notification_ok_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:text="@string/OK" />

</RelativeLayout>